--- a/Assignments/Assignemnt 2/NLP_Assignment_2.ipynb
+++ b/Assignments/Assignemnt 2/NLP_Assignment_2.ipynb
@@ -285,20 +285,20 @@
       "source": [
         "def pre_process_text_and_separate(dic_tag_text):\n",
         "  \"\"\"\n",
-        "    This function takes in a dictionary and processes the text by tokenizing the questions and answers \n",
+        "    This function takes in a dictionary and processes the text by tokenizing the questions titles and bodies \n",
         "    using the clean_text_and_tokenize function.\n",
         "    The function then creates three dictionaries, each with the same keys (tags) as the input dictionary:\n",
-        "    1. set_questions: Stores the frequencies of tokens in the questions.\n",
-        "    2. set_answers: Stores the frequencies of tokens in the answers.\n",
-        "    3. set_both: Stores the frequencies of tokens in both questions and answers.\n",
+        "    1. set_questions: Stores the frequencies of tokens in the question titles.\n",
+        "    2. set_bodies: Stores the frequencies of tokens in the bodies.\n",
+        "    3. set_both: Stores the frequencies of tokens in both questions titles and bodies.\n",
         "    \n",
         "    The values in the output dictionaries are sorted by the token in ascending order.\n",
         "    \n",
         "    Args:\n",
-        "        dic_tag_text (dict): A dictionary with tags as keys and tuples of question-answer pairs as values.\n",
+        "        dic_tag_text (dict): A dictionary with tags as keys and tuples of question title and body pairs as values.\n",
         "    \"\"\"\n",
-        "  set_questions = {}\n",
-        "  set_answers = {}\n",
+        "  set_titles = {}\n",
+        "  set_bodies = {}\n",
         "  set_both = {}\n",
         "\n",
         "  for tag, values in dic_tag_text.items():\n",
@@ -314,11 +314,11 @@
         "          answers_tokens.extend(answer_tokens)\n",
         "          both_tokens.extend(question_tokens + answer_tokens)\n",
         "\n",
-        "      set_questions[tag] = dict(sorted(Counter(questions_tokens).items(), key=lambda x: x[0]))\n",
-        "      set_answers[tag] = dict(sorted(Counter(answers_tokens).items(), key=lambda x: x[0]))\n",
+        "      set_titles[tag] = dict(sorted(Counter(questions_tokens).items(), key=lambda x: x[0]))\n",
+        "      set_bodies[tag] = dict(sorted(Counter(answers_tokens).items(), key=lambda x: x[0]))\n",
         "      set_both[tag] = dict(sorted(Counter(both_tokens).items(), key=lambda x: x[0]))\n",
         "\n",
-        "  return set_questions, set_answers, set_both\n"
+        "  return set_titles, set_bodies, set_both\n"
       ],
       "metadata": {
         "id": "-iA4tNaECLjF"
